# KOMIPO_ZEROLEAK

./: .gitignore  3D_fft_plot.py  Demucs.py  convtasnet.py  device_remove_noise.py  main.py  noise_analyze.py  noise_analyze_auto.py  pyproject.toml  step_by_step.py  test_auto.py
electric_sound/: fft_data.csv  fft_data_abs.csv  stft_spectrogram.csv  stft_spectrogram_after.csv
test/3D_FFT_PLOT/: fft_3d_plot.mat
test/가나다/: stft_spectrogram.csv
