[project]
name = "komipo-zeroleak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asteroid>=0.7.0",
    "demucs>=4.0.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "noisereduce>=3.0.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "soundfile>=0.13.1",
]
